# AutomativeProgram

./: CMakeLists.txt  README.md
include/: AudioAmplifierEcu.h
src/: AudioAmplifierEcu.cpp  AudioToolClient.cpp  AudioToolClient.h  CanType.cpp  CanType.h  Diagnostics.cpp  Diagnostics.h  main.cpp
